[gd_scene load_steps=3 format=3 uid="uid://dgdkavse4ihg4"]

[ext_resource type="Script" path="res://SCENES/components/collectable_component.gd" id="1_d03by"]
[ext_resource type="AudioStream" uid="uid://bufxvd4wl3jra" path="res://ASSETS/audio/sfx/itemcollect.ogg" id="2_dsoki"]

[node name="CollectableComponent" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_d03by")

[node name="CollectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_dsoki")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
